--- a/spark.learning/pom.xml
+++ b/spark.learning/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>spark-streaming-kafka_2.10</artifactId>
 			<version>1.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.spark</groupId>
+			<artifactId>spark-sql_2.10</artifactId>
+			<version>1.6.2</version>
+		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.apache.kafka</groupId> -->	
 <!-- 			<artifactId>kafka_2.11</artifactId> -->
