--- a/api/src/main/resources/jdbc.properties
+++ b/api/src/main/resources/jdbc.properties
@@ -1,3 +1,3 @@
 db_user=root
-jdbc_url=jdbc:mysql://120.24.183.163:3306/qt?useUnicode=true&characterEncoding=UTF-8
-db_password=test@123456
+jdbc_url=jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&characterEncoding=UTF-8
+db_password=123456
