--- a/api/pom.xml
+++ b/api/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0</version>
 	<name>api Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	
+
 	<repositories>
 		<repository>
 			<id>proxy_nexus</id>
@@ -21,7 +21,7 @@
 			<url>http://104.194.70.30:8081/nexus/content/repositories/central/</url>
 		</repository>
 	</repositories>
-	
+
 	<dependencies>
 		<!--添加本地jFinal依赖项 -->
 		<dependency>
@@ -59,8 +59,29 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.htmlunit/htmlunit -->
+		<dependency>
+			<groupId>net.sourceforge.htmlunit</groupId>
+			<artifactId>htmlunit</artifactId>
+			<version>2.26</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>api</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
