--- a/api/src/main/resources/log4j.properties
+++ b/api/src/main/resources/log4j.properties
@@ -5,9 +5,9 @@ log4j.appender.stdout.layout.ConversionPattern = [%-5p][%-22d{yyyy/MM/dd HH:mm:s
 log4j.appender.stdout.Threshold = ERROR
 log4j.appender.stdout.ImmediateFlush = TRUE 
 log4j.appender.stdout.Target = System.out 
-#\u8F93\u51FA\u5230\u6587\u4EF6
+#\u8f93\u51fa\u5230\u6587\u4ef6
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = logs/qt.log
+log4j.appender.E.File = H:/logs/api.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = ERROR
 log4j.appender.E.ImmediateFlush = TRUE
