--- a/springboot-dubbo/src/main/resources/application-prod.properties
+++ b/springboot-dubbo/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 #dubbo
-spring.dubbo.application.name=hello-app-prod
-spring.dubbo.registry.address=zookeeper://192.168.177.199:2181
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
-spring.dubbo.scan=org.kevin.dubboapi
+#spring.dubbo.application.name=hello-app-prod
+#spring.dubbo.registry.address=zookeeper://192.168.177.199:2181
+#spring.dubbo.protocol.name=dubbo
+#spring.dubbo.protocol.port=20880
+#spring.dubbo.scan=org.kevin.dubboapi
 server.port=8081
 
 #jdbc
@@ -12,3 +12,6 @@ app.datasource.username=root
 app.datasource.password=123456
 app.datasource.maximum-pool-size=30
 app.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+zookeeper_url=zookeeper://192.168.177.199:2181
+dubbo_port=20880
