--- a/springboot-dubbo/pom.xml
+++ b/springboot-dubbo/pom.xml
@@ -26,23 +26,28 @@
 	<dependencies>
 
 		<!-- Spring Boot Dubbo 依赖 -->
-		<dependency>
-			<groupId>io.dubbo.springboot</groupId>
-			<artifactId>spring-boot-starter-dubbo</artifactId>
-			<version>${dubbo-spring-boot}</version>
-			<exclusions>
-<!-- 				排除掉spring的依赖，使用自己的 -->
-				<exclusion>
-					<groupId>org.springframework</groupId>
-					<artifactId>spring</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>io.dubbo.springboot</groupId> -->
+		<!-- <artifactId>spring-boot-starter-dubbo</artifactId> -->
+		<!-- <version>${dubbo-spring-boot}</version> -->
+		<!-- <exclusions> -->
+		<!-- 排除掉spring的依赖，使用自己的 -->
+		<!-- <exclusion> -->
+		<!-- <groupId>org.springframework</groupId> -->
+		<!-- <artifactId>spring</artifactId> -->
+		<!-- </exclusion> -->
+		<!-- </exclusions> -->
+		<!-- </dependency> -->
 
 		<!-- spring-boot-starter-web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
 		</dependency>
 
 		<!-- spring-jdbc -->
@@ -59,18 +64,18 @@
 			<type>jar</type>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>com.alibaba</groupId> -->
-<!-- 			<artifactId>dubbo</artifactId> -->
-<!-- 			<version>2.5.3</version> -->
-<!-- 			<exclusions> -->
-	<!-- 		排除掉spring的依赖，使用自己的 -->
-<!-- 				<exclusion> -->
-<!-- 					<groupId>org.springframework</groupId> -->
-<!-- 					<artifactId>spring</artifactId> -->
-<!-- 				</exclusion> -->
-<!-- 			</exclusions> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>dubbo</artifactId>
+			<version>2.5.3</version>
+			<exclusions>
+				<!-- 排除掉spring的依赖，使用自己的 -->
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
@@ -101,6 +106,18 @@
 			<version>2.4.1</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
 
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.9.10</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.10</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 	<build>
