--- a/springboot-dubbo/src/main/resources/application-dev.properties
+++ b/springboot-dubbo/src/main/resources/application-dev.properties
@@ -1,15 +1,18 @@
-#dubbo
-spring.dubbo.application.name=hello-app
-spring.dubbo.registry.address=zookeeper://192.168.177.199:2181
-spring.dubbo.protocol.name=dubbo
-spring.dubbo.protocol.port=20880
-spring.dubbo.scan=org.kevin.dubboapi
-spring.dubbo.monitor.protocol=registry
+#springboot-dubbo
+#spring.dubbo.application.name=hello-app
+#spring.dubbo.registry.address=zookeeper://192.168.177.199:2181
+#spring.dubbo.protocol.name=dubbo
+#spring.dubbo.protocol.port=20880
+#spring.dubbo.scan=org.kevin.dubboapi
+#spring.dubbo.monitor.protocol=registry
 server.port=8081
 
 #jdbc
-app.datasource.url=jdbc:mysql://localhost:3306/test
+app.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull&amp;jdbcCompliantTruncation=false&amp;tinyInt1isBit=false&amp;characterEncoding=utf8
 app.datasource.username=root
 app.datasource.password=123456
 app.datasource.maximum-pool-size=30
 app.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+zookeeper_url=zookeeper://192.168.177.199:2181
+dubbo_port=20880
