--- a/weixin/src/main/resources/common/weixin_config.properties
+++ b/weixin/src/main/resources/common/weixin_config.properties
@@ -13,3 +13,4 @@ weixin_mass_send_url=https://api.weixin.qq.com/cgi-bin/message/mass/send?access_
 weixin_send_redpacket_url=https://api.mch.weixin.qq.com/mmpaymkttransfers/sendredpack
 weixin_mch_id=111111
 weixin_jsapi_ticket_url=https://api.weixin.qq.com/cgi-bin/ticket/getticket?access_token=ACCESS_TOKEN&type=jsapi
+weixin_custom_msg_send_url=https://api.weixin.qq.com/cgi-bin/message/custom/send?access_token=ACCESS_TOKEN
