--- a/springboot-dubbo/src/main/resources/application-dev.properties
+++ b/springboot-dubbo/src/main/resources/application-dev.properties
@@ -5,14 +5,21 @@
 #spring.dubbo.protocol.port=20880
 #spring.dubbo.scan=org.kevin.dubboapi
 #spring.dubbo.monitor.protocol=registry
+
 server.port=8081
 
 #jdbc
-app.datasource.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull&amp;jdbcCompliantTruncation=false&amp;tinyInt1isBit=false&amp;characterEncoding=utf8
-app.datasource.username=root
-app.datasource.password=123456
-app.datasource.maximum-pool-size=30
-app.datasource.driver-class-name=com.mysql.jdbc.Driver
+app.datasource.primary.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull&amp;jdbcCompliantTruncation=false&amp;tinyInt1isBit=false&amp;characterEncoding=utf8
+app.datasource.primary.username=root
+app.datasource.primary.password=123456
+app.datasource.primary.maximum-pool-size=30
+app.datasource.primary.driver-class-name=com.mysql.jdbc.Driver
+
+app.datasource.secondary.url=jdbc:mysql://localhost:3306/test?autoReconnect=true&amp;zeroDateTimeBehavior=convertToNull&amp;jdbcCompliantTruncation=false&amp;tinyInt1isBit=false&amp;characterEncoding=utf8
+app.datasource.secondary.username=root
+app.datasource.secondary.password=123456
+app.datasource.secondary.maximum-pool-size=30
+app.datasource.secondary.driver-class-name=com.mysql.jdbc.Driver
 
 zookeeper_url=zookeeper://192.168.177.199:2181
 dubbo_port=20880
