--- a/springboot-dubbo/pom.xml
+++ b/springboot-dubbo/pom.xml
@@ -119,6 +119,14 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.mindrot/jbcrypt -->
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
+
+
 	</dependencies>
 	<build>
 		<finalName>springboot-dubbo-${project.version}</finalName>
